--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .sass-cache
 .publish
 Desktop.ini
-node_modules
+node_modules/
 **/generated/_icons.sass
 npm-debug.log
 *.swp
@@ -15,3 +15,6 @@ public/fonts
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
 .ebextensions
+
+#ide and text editors
+.vscode/
